# pydantic-ddd-interface

./: pyproject.toml  pytest.ini
.github/workflows/: comprehensive-ci.yml  pr-checks.yml  test.yml  windows-debug-test.yml  windows-debug.yml  windows-test.yml
pydddi/infrastructure/: repository.py
tests/: test_basic.py
